--- a/admin/src/web/templates/jya/show.html
+++ b/admin/src/web/templates/jya/show.html
@@ -15,9 +15,7 @@
     <a href="{{ url_for('jya.index') }}" class="btn btn-primary btn-icon">
         <i class="fas fa-arrow-left"></i> Volver al listado de jinetes y amazonas
     </a>
-    <a href="{{ url_for('team.update', id=rider.id) }}" class="btn btn-warning btn-icon">
-        <i class="fas fa-edit"></i> Editar
-    </a>
+   
     <form action="{{ url_for('jya.destroy', id=rider.id) }}" method="POST" onsubmit="return confirmDeleteRider();"
         style="display:inline;">
         <button type="submit" class="btn btn-danger btn-icon">
@@ -30,6 +28,7 @@
     <div class="card-body">
         <h5 class="card-title">{{ rider.name }} {{ rider.last_name }}</h5>
         <p class="card-text">
+            <h5 class="border-bottom border-dark pb-2"></h5>
             <strong style="font-size: 1.2rem; color: #0056b3; margin-top: 10px; display: block;">Datos
                 personales:</strong>
             <strong style="margin-left: 20px;">DNI:</strong> {{ rider.dni }}<br>
@@ -44,31 +43,61 @@
             <strong style="margin-left: 20px;">Lugar de nacimiento:</strong> {{ rider.city_of_birth.name }}, provincia
             de {{rider.city_of_birth.province.name}}<br>
             <strong style="margin-left: 20px;">Tiene certificado de discapacidad:</strong> {% if rider.disability_id
-            %}Sí. {{ rider.disability.name }}{% else %}No{% endif %}<br>
+            %}Sí. Discapacidad {{ rider.disability.type.name }}: {{ rider.disability.name }}{% else %}No{% endif %}<br>
             <strong style="margin-left: 20px;">Tiene pensión:</strong> {% if rider.pension_benefit %}Sí. {{
             rider.pension_benefit }}{% else %}No{% endif %}<br>
             <strong style="margin-left: 20px;">Recibe asignación familiar:</strong> {% if rider.family_allowance %}{{
             rider.family_allowance }}{% else %}No{% endif %}<br>
             <strong style="margin-left: 20px;">Está becado:</strong> {% if rider.grant_percentage %}Sí. Porcentaje: {{
             rider.grant_percentage }}%{% else %}No{% endif %}<br>
+            <strong style="margin-left: 20px;">Tiene deuda con nuestros profesionales:</strong> {% if has_debt %}Sí{% else %}No{% endif %}<br>
             <strong style="font-size: 1.2rem; color: #0056b3; margin-top: 10px; display: block;">Situación
                 previsional:</strong>
             <strong style="margin-left: 20px;">Obra social:</strong> {{ rider.health_insurance }}<br>
             <strong style="margin-left: 20px;">Número de obra social:</strong> {{ rider.health_insurance_number }}<br>
             <strong style="margin-left: 20px;">Tiene tutela:</strong> {% if rider.has_guardianship %}Sí{% else %}No{%
-            endif %}<br>
+            endif %}
+            <br>
+            <br>
+            <a href="{{ url_for('jya.update_general', id=rider.id) }}" class="btn btn-warning btn-icon">
+                <i class="fas fa-edit"></i> Editar Información general
+            </a>
+
+            <h5 class="border-bottom border-dark pb-2"></h5>
             {% if rider.school %}
-            {% for school in rider.school %}
             <strong style="font-size: 1.2rem; color: #0056b3; margin-top: 10px; display: block;">Institución escolar a
                 la que concurre:</strong>
-            <strong style="margin-left: 20px;">Nombre:</strong> {{ school.name }}<br>
-            <strong style="margin-left: 20px;">Dirección:</strong> {{ school.address }}<br>
-            <strong style="margin-left: 20px;">Teléfono:</strong> {{ school.phone }}<br>
-            <strong style="margin-left: 20px;">Nivel educativo:</strong> {{ school.level }}<br>
-            <strong style="margin-left: 20px;">Año lectivo:</strong> {{ school.year }}°<br>
-            <strong style="margin-left: 20px;">Observaciones:</strong> {{ school.observations }}<br>
-            {% endfor %}
+            <strong style="margin-left: 20px;">Nombre:</strong> {{ rider.school.name }}<br>
+            <strong style="margin-left: 20px;">Dirección:</strong> {{ rider.school.address }}<br>
+            <strong style="margin-left: 20px;">Teléfono:</strong> {{ rider.school.phone }}<br>
+            <strong style="margin-left: 20px;">Nivel educativo:</strong> {{ rider.school.level }}<br>
+            <strong style="margin-left: 20px;">Año lectivo:</strong> {{ rider.school.year }}°<br>
+            <strong style="margin-left: 20px;">Observaciones:</strong> {{ rider.school.observations }}<br>
             {% endif %}
+
+            {% if rider.job_proposal %}
+            <strong style="font-size: 1.2rem; color: #0056b3; margin-top: 10px; display: block;">Trabajo en
+                CEDICA:</strong>
+            <strong style="margin-left: 20px;">Propuesta de trabajo institucional:</strong> {{
+            rider.job_proposal.institutional_work_proposal }}<br>
+            <strong style="margin-left: 20px;">Condición:</strong> {{ rider.job_proposal.condition }}<br>
+            <strong style="margin-left: 20px;">Sede:</strong> {{ rider.job_proposal.headquarters }}<br>
+            <strong style="margin-left: 20px;">Días:</strong> {{ rider.job_proposal.days | join(', ') }}<br>
+            <strong style="margin-left: 20px;">Profesor:</strong> {{ rider.job_proposal.professor.name }} {{ rider.job_proposal.professor.last_name
+            }}<br>
+            <strong style="margin-left: 20px;">Conductor del caballo:</strong> {{ rider.job_proposal.member_horse_rider.name }} {{
+            rider.job_proposal.member_horse_rider.last_name }}<br>
+            <strong style="margin-left: 20px;">Caballo:</strong> {{ rider.job_proposal.horse.name }}<br>
+            <strong style="margin-left: 20px;">Asistente:</strong> {{ rider.job_proposal.assistant.name }} {{ rider.job_proposal.assistant.last_name
+            }}<br>
+            {% endif %}
+            <br>
+            <a href="{{ url_for('jya.update_school_job', id=rider.id) }}" class="btn btn-warning btn-icon">
+                <i class="fas fa-edit"></i> Editar Información escolar y laboral
+            </a>
+
+            <h5 class="border-bottom border-dark pb-2"></h5>
+
             {% if rider.tutor_1_id or rider.tutor_2_id %}
             <strong style="font-size: 1.2rem; color: #0056b3; margin-top: 10px; display: block;">Datos del
                 tutor:</strong>
@@ -97,6 +126,12 @@
             <strong style="margin-left: 40px;">Trabajo:</strong> {{ rider.tutor_2.job }}<br>
             {% endif %}
             {% endif %}
+            <br>
+            <a href="{{ url_for('jya.update_tutor', id=rider.id) }}" class="btn btn-warning btn-icon">
+                <i class="fas fa-edit"></i> Editar Información de los tutores
+            </a>
+            <h5 class="border-bottom border-dark pb-2"></h5>
+
             {% if rider.members %}
                 <strong style="font-size: 1.2rem; color: #0056b3; margin-top: 10px; display: block;">Profesionales que lo
                     atienden:</strong>
@@ -106,24 +141,11 @@
                     <strong style="margin-left: 40px;">DNI:</strong> {{ member.dni }}<br>
                 {% endfor %}
             {% endif %}
-            {% if rider.job_proposal %}
-            <strong style="font-size: 1.2rem; color: #0056b3; margin-top: 10px; display: block;">Trabajo en
-                CEDICA:</strong>
-            {% for job in rider.job_proposal %}
-            <strong style="margin-left: 20px;">Propuesta de trabajo institucional:</strong> {{
-            job.institutional_work_proposal }}<br>
-            <strong style="margin-left: 20px;">Condición:</strong> {{ job.condition }}<br>
-            <strong style="margin-left: 20px;">Sede:</strong> {{ job.headquarters }}<br>
-            <strong style="margin-left: 20px;">Días:</strong> {{ job.days | join(', ') }}<br>
-            <strong style="margin-left: 20px;">Profesor:</strong> {{ job.professor.name }} {{ job.professor.last_name
-            }}<br>
-            <strong style="margin-left: 20px;">Conductor del caballo:</strong> {{ job.member_horse_rider.name }} {{
-            job.member_horse_rider.last_name }}<br>
-            <strong style="margin-left: 20px;">Caballo:</strong> {{ job.horse.name }}<br>
-            <strong style="margin-left: 20px;">Asistente:</strong> {{ job.assistant.name }} {{ job.assistant.last_name
-            }}<br>
-            {% endfor %}
-            {% endif %}
+            <br>
+            <a href="{{ url_for('jya.update_professional', id=rider.id) }}" class="btn btn-warning btn-icon">
+                <i class="fas fa-edit"></i> Editar profesionales que lo atienden
+            </a>
+
         </p>
     </div>
 </div>
@@ -165,12 +187,10 @@
                 </select>
             </div>
             <button type="submit" class="btn btn-primary"
-                style="background-color: #007bff; border-color: #007bff;">Buscar
-                <i class="fas fa-search"></i>
+                style="background-color: #007bff; border-color: #007bff;"><i class="fas fa-search"></i> Buscar
             </button>
             <a href="{{ url_for('jya.show', id=rider.id) }}" class="btn btn-secondary"
-                style="background-color: #6c757d; border-color: #6c757d;">Limpiar filtros
-                <i class="fas fa-eraser"></i>
+                style="background-color: #6c757d; border-color: #6c757d;"><i class="fas fa-eraser"></i> Limpiar filtros
             </a>
         </form>
 
