--- a/admin/src/web/templates/team/index.html
+++ b/admin/src/web/templates/team/index.html
@@ -4,6 +4,22 @@
 
 {% block head %}
 {{ super() }}
+<style>
+  @media screen and (max-width: 768px) {
+
+    /* Ocultar columnas en pantallas pequeñas */
+    tr>td:nth-child(3),
+    tr>td:nth-child(4),
+    tr>td:nth-child(5),
+    tr>td:nth-child(6),
+    tr>th:nth-child(3),
+    tr>th:nth-child(4),
+    tr>th:nth-child(5),
+    tr>th:nth-child(6) {
+      display: none;
+    }
+  }
+</style>
 {% endblock %}
 
 {% block content %}
@@ -44,18 +60,24 @@
       {% endfor %}
     </select>
   </div>
-  <button type="submit" class="btn btn-primary"
-    style="background-color: #007bff; border-color: #007bff;">Buscar
-    <i class="fas fa-search"></i>
+  <div class="form-group mr-3" style="margin-bottom: 10px;">
+    <label for="created_at">Activo:</label>
+    <select class="form-control" id="active" name="active" style="width: auto; display: inline-block;">
+      <option value="">Seleccionar</option>
+      <option value="True" {% if filters.active == 'True' %}selected{% endif %}>Sí</option>
+      <option value="False" {% if filters.active == 'False' %}selected{% endif %}>No</option>
+    </select>
+  </div>
+  <button type="submit" class="btn btn-primary" style="background-color: #007bff; border-color: #007bff;"><i
+      class="fas fa-search"></i> Buscar
   </button>
   <a href="{{ url_for('team.index') }}" class="btn btn-secondary"
-    style="background-color: #6c757d; border-color: #6c757d;">Limpiar filtros
-    <i class="fas fa-eraser"></i>
+    style="background-color: #6c757d; border-color: #6c757d;"><i class="fas fa-eraser"></i> Limpiar filtros
   </a>
 </form>
 
 <a href="{{ url_for('team.create') }}" class="btn btn-primary" style="margin-top: 10px; margin-bottom: 20px;">
-  Crear nuevo miembro <i class="fas fa-user-plus"></i>
+  <i class="fas fa-user-plus"></i> Crear nuevo miembro
 </a>
 
 <table class="table table-striped"
